--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
@@ -11,7 +11,7 @@
   <body class="in-game">
     <!-- -------------------------------- Header ------------------------------- -->
     <header id="header" class="app-header">
-      <img src="../../img/favicon.png" style="width: 18px" />
+      <img src="../../img/favicon2.png" style="width: 18px" />
       <h1>AwardPool</h1>
       <h1 style="margin: auto">
         Show/Hide:
