feat: adds updated ui

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../../css/general.css" />
+    <link rel="stylesheet" href="../../css/styleguide.css" />
     <link rel="stylesheet" href="../../css/header.css" />
     <link rel="stylesheet" href="../../css/ingame.css" />
     <link rel="stylesheet" href="../../css/modal.css" />
@@ -11,10 +12,9 @@
   <body class="in-game">
     <!-- -------------------------------- Header ------------------------------- -->
     <header id="header" class="app-header">
-      <img src="../../img/favicon2.png" style="width: 18px" />
-      <h1>AwardPool</h1>
-      <h1 style="margin: auto">
-        Show/Hide:
+      <img src="../../img/favicon2.svg" class="app-header-icon" />
+      <h1 class="show-hide" style="margin: auto">
+        <span class="show-hide-text"></span>Show/Hide:
         <a
           href="overwolf://settings/games-overlay?hotkey=showhide"
           id="hotkey"
