--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -59,7 +59,7 @@
       <img src="/img/lavaLamp.gif" alt="loading..." />
     </div>
     <div class="iframe-panel">
-      <iframe src="https://app.awardpool.com/version-ronald/signup_index_new/login" loading="lazy" id="ap_iframe"></iframe>
+      <iframe src="https://app.awardpool.com/version-ronald/signup_index_new/login"  id="ap_iframe"></iframe>
     </div> 
   </main>
 
