feat: opens in-game window when match starts or ends

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
@@ -22,7 +22,10 @@
         ></a>
       </h1>
       <div class="window-controls-group">
-        <button class="icon window-control" id="minimizeButton">
+        <button
+          class="icon window-control window-control-minimize"
+          id="minimizeButton"
+        >
           <svg>
             <use xlink:href="/img/header_icons.svg#window-control_minimize" />
           </svg>
