--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -59,7 +59,7 @@
       <img src="/img/lavaLamp.gif" alt="loading..." />
     </div>
     <div class="iframe-panel">
-      <iframe src="https://app.awardpool.com/version-ronald/signup_index_new/login"  id="ap_iframe"></iframe>
+      <iframe src="https://app.awardpool.com/version-prelaunchversion/signup_index_new"  id="ap_iframe"></iframe>
     </div> 
   </main>
 
@@ -74,7 +74,7 @@
       // Note: https protocol here
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-144253676-3', 'auto');
+    ga('create', 'G-3Y4KTSFNL0', 'auto');
 
     // Removes failing protocol check. @see: http://stackoverflow.com/a/22152353/1958200
     ga('set', 'checkProtocolTask', function () { });
