--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -41,7 +41,7 @@
       <img src="/img/lavaLamp.gif" alt="loading..." />
     </div>
     <div class="iframe-panel">
-      <iframe src="https://app.awardpool.com/version-live/signup_index_new"  id="ap_iframe"></iframe>
+      <iframe src="https://app.awardpool.com/p2e_login"  id="ap_iframe"></iframe>
     </div> 
   </main>
 
