--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -32,16 +32,15 @@
   </header>
 
   <!-- --------------------------------- Main -------------------------------- -->
-<!-- 
-  https://app.awardpool.com/version-live/signup_index_new -->
-  <!-- https://app.awardpool.com/version-prelaunchversion/signup_index_new -->
+  <!-- https://app.awardpool.com/version-ronald/p2e_login -->
+  <!-- https://app.awardpool.com/p2e_login -->
   <main>
     <div id="loading-overlay">
       
       <img src="/img/lavaLamp.gif" alt="loading..." />
     </div>
     <div class="iframe-panel">
-      <iframe src="https://app.awardpool.com/p2e_login"  id="ap_iframe"></iframe>
+      <iframe src="https://app.awardpool.com/version-ronald/p2e_login"  id="ap_iframe"></iframe>
     </div> 
   </main>
 
