--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../../css/ingame.css" />
     <link rel="stylesheet" href="../../css/modal.css" />
     <title>Overwolf Sample App - In-Game page</title>
+    <script
+      src="https://content.overwolf.com/libs/ads/latest/owads.min.js"
+      async
+    ></script>
   </head>
   <body class="in-game">
     <!-- -------------------------------- Header ------------------------------- -->
