fix: fixes bug icon

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -18,7 +18,7 @@
     <div class="window-controls-group">
       
       <button class="icon window-control" id="bugButton"  >
-        <svg>
+        <svg style="transform: scale(.55);">
           <use xlink:href="/img/header_icons.svg#window-control_bug-report" />
         </svg>
       </button>
