added the alert for internet disconnect

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/desktop/desktop.html
@@ -16,7 +16,12 @@
   <header id="header" class="app-header">
    
     <div class="window-controls-group">
-      
+      <!-- delete this -->
+      <button class="icon window-control window-control-close" id="stasButton">
+        <svg>
+          <use xlink:href="/img/header_icons.svg#window-control_stas" />
+        </svg>
+      </button>
       <button class="icon window-control" id="bugButton"  >
         <svg style="transform: scale(.55);">
           <use xlink:href="/img/header_icons.svg#window-control_bug-report" />
@@ -38,6 +43,8 @@
         <svg>
           <use xlink:href="/img/header_icons.svg#window-control_close" />
         </svg>
+      </button>
+      
       </button>
     </div>
   </header>
