fix: fixes ad related problems

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/src/in_game/in_game.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../css/header.css" />
     <link rel="stylesheet" href="../../css/ingame.css" />
     <link rel="stylesheet" href="../../css/modal.css" />
+    <link rel="stylesheet" href="../../css/ad.css" />
     <title>Award Pool - In-Game page</title>
     <script
       src="https://content.overwolf.com/libs/ads/latest/owads.min.js"
